[metadata]
name = RadixLib
version = 0.0.1
author = Omar Abdulla
author_email = omara.pae@live.com
description = A Python package written to make the interaction with the Radix blockchain easier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RealOAAS/RadixLib
project_urls =
    Bug Tracker = https://github.com/RealOAAS/RadixLib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src